<resources>
    <string name="app_name">Libreria</string>
    <string name="Home">Home</string>
    <string name="libreria">Libreria</string>
    <string name="miLista">Mi Lista</string>
    <string name="inputhintUsuario">Usuario</string>
    <string name="inputhintContraseña">Contraseña</string>
    <string name="inicioTexto">COMIENZA TU \n AVENTURA</string>
    <string name="btntxtRegistro">Registrarse</string>
    <string name="btntxtEntrar">Entrar</string>
    <string name="add_LIBRO">addLibro</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="hintTxtUsuario">Usuario</string>
    <string name="hintTxtContrasenya">Contraseña</string>
    <string name="btnLoginTxt">ENTRAR</string>
    <string name="btnRegistroText">Registrarte</string>
    <string name="recordarmeText">Recordarme</string>
    <string name="txt_btn_enlace">Ir al enlace</string>
    <string name="aviso_mibiblioteca">Todavía no has seguido ningún libro</string>
    <string name="aviso_mislibros">Todavía no has creado ningún libro</string>
    <string name="txt_sinopsis">Sinopsis:</string>
    <string name="titulo_act_Libreria">TODOS LOS LIBROS</string>
    <string name="txt_Bienvenida">BIENVENIDO/A</string>
    <string name="txt_MiBiblioteca">Mi biblioteca</string>
    <string name="txt_MisLibros">Mis libros</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
</resources>