<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <ImageView
        android:id="@+id/imgFondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/imgfondo_home"
        android:scaleType="centerCrop"

        />



    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_txtBienvenida"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/txtBienvenida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    style="@style/titulo_style"
                    android:text="@string/txt_Bienvenida"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_txt_Bienvenida"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="15dp"/>

                <TextView
                    android:id="@+id/txtUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/titulo_style"
                    android:textSize="@dimen/size_txt_Bienvenida"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/txtBienvenida"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inicio_fondoRedondo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inicio_fondo_redondo_claro">

                <TextView
                    android:id="@+id/textMiBiblioteca"
                    style="@style/titulo_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimension20dp"
                    android:layout_marginStart="@dimen/dimension10dp"
                    android:text="@string/txt_MiBiblioteca"
                    android:textSize="@dimen/size_txt_miBiblioteca"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerViewMiBiblioteca"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="20dp" />

                <TextView
                    android:id="@+id/avisoMiBlibioteca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:visibility="gone"
                    android:text="@string/aviso_mibiblioteca"
                    android:layout_marginTop="@dimen/dimension100dp"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/avisoMisLibros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:visibility="gone"
                    android:text="@string/aviso_mislibros"
                    android:layout_marginBottom="@dimen/dimension100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                 <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewMiBiblioteca"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/tamañoRecyclerView"
                    android:layout_marginStart="@dimen/dimension10dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/textMiBiblioteca"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.157"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textMiBiblioteca"
                    tools:listitem="@layout/item_libro" />

                <TextView
                    android:id="@+id/textMisLibros"
                    style="@style/titulo_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimension10dp"
                    android:text="@string/txt_MisLibros"
                    android:textSize="@dimen/txtSizeMislibros"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerViewMisLibros"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewMiBiblioteca"
                    tools:layout_editor_absoluteX="0dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewMisLibros"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimension250dp"
                    android:layout_marginStart="@dimen/dimension10dp"
                    android:layout_marginEnd="@dimen/dimension10dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textMisLibros"
                    tools:listitem="@layout/item_libro" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar_rounded_claro"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/white"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageButton

            android:id="@+id/btnCerrarSesion"
            android:layout_width="@dimen/medidas_btn_toolbar"
            android:layout_height="@dimen/medidas_btn_toolbar"
            android:src="@drawable/ic_cerrar_sesion"
            android:background="@android:color/transparent">

        </ImageButton>

        <ImageButton

            android:id="@+id/btnCambiarTono"
            android:layout_width="@dimen/medidas_btn_toolbar"
            android:layout_height="@dimen/medidas_btn_toolbar"
            android:src="@drawable/ic_modooscuro"
            android:background="@android:color/transparent">

        </ImageButton>

        <ImageButton
            android:layout_gravity="end"
            android:id="@+id/btnLibreria"
            android:layout_width="@dimen/medidas_btn_toolbar"
            android:layout_marginEnd="80dp"
            android:layout_height="@dimen/medidas_btn_toolbar"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_libreria"
            android:background="@android:color/transparent"
            >

        </ImageButton>

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:theme="@style/Theme.MaterialComponents.Light"
        android:id="@+id/crearLibro"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_crear_libro_oscuro">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>




